# research-mcp-agent

./: .gitignore  README.md  main.py  pyproject.toml
research_mcp_agent/: cli.py  io.py
research_mcp_agent/agent/: graph.py  nodes.py
research_mcp_agent/ingestion/: indexer.py  loader.py
research_mcp_agent/mcp_server/: server.py
samples/: input_article_1.txt  input_article_1_extraction.json  input_article_1_full.json  input_article_1_review.md  input_article_3.url
src/agent/: graph.py  nodes.py  prompts.py  schemas.py
src/ingestion/: indexer.py  loader.py
src/mcp_server/: server.py
