[project]
name = "research-mcp-agent"
version = "0.1.0"
description = "An intelligent system that automatically classifies, analyzes, and critiques scientific articles using a multi-agent architecture and MCP (Model Context Protocol)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "fastmcp==2.14.0",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.0.5",
    "nltk>=3.9.2",
    "pypdf>=6.4.1",
]
